// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default Date 1`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0 {
  display: inline-block;
  width: 21.42857142857143em;
  padding: 2.142857142857143em 1.4285714285714286em 3.1428571428571432em;
  vertical-align: top;
  font-size: 1.4rem;
}

.c1 {
  font-size: 1em;
}

.c2 {
  text-align: center;
  margin-bottom: 0.8571428571428572em;
}

.c6 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
}

.c6:hover {
  color: #9482ff;
}

.c3 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: px;
  vertical-align: middle;
}

.c3:hover {
  color: #9482ff;
}

.c7 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: px;
  vertical-align: middle;
}

.c7:hover {
  color: #9482ff;
}

.c5 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: 20px;
  vertical-align: middle;
}

.c5:hover {
  color: #9482ff;
}

.c8 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: 20px;
  vertical-align: middle;
}

.c8:hover {
  color: #9482ff;
}

.c9 {
  padding: 0;
  margin: 0;
  margin-bottom: 0.8571428571428572em;
}

.c10 {
  display: inline-block;
  font-size: 1em;
  width: 2.63265306122449em;
  height: 2.63265306122449em;
  text-align: center;
  line-height: 2.63265306122449em;
  cursor: pointer;
}

.c11 {
  font-size: 1em;
}

.c12 {
  display: inline-block;
  width: 2.63265306122449em;
  text-align: center;
  vertical-align: middle;
  margin: 0.2142857142857143em 0;
}

.c12:nth-child()>i {
  border: 1px solid #684fff;
  color: #666;
  background: #fff;
  border-radius: 50%;
}

.c13 {
  font-style: normal;
  display: inline-block;
  width: 1.8571428571428574em;
  height: 1.8571428571428574em;
  text-align: center;
  line-height: 1.8571428571428574em;
  vertical-align: text-top;
  cursor: pointer;
  font-size: 1em;
  color: #ccc;
}

.c13:hover {
  background: #9482ff;
  color: #fff;
  border-radius: 50%;
}

.c14 {
  font-style: normal;
  display: inline-block;
  width: 1.8571428571428574em;
  height: 1.8571428571428574em;
  text-align: center;
  line-height: 1.8571428571428574em;
  vertical-align: text-top;
  cursor: pointer;
  font-size: 1em;
  color: #666;
}

.c14:hover {
  background: #9482ff;
  color: #fff;
  border-radius: 50%;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_double_right  c4"
          />
        </span>
        <span
          className="c5"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_Left  c4"
          />
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          2018
          年
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          11
          月
        </span>
        <span
          className="c7"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_double_left  c4"
          />
        </span>
        <span
          className="c8"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_right  c4"
          />
        </span>
      </div>
      <ul
        className="c9"
      >
        <li
          className="c10"
          onClick={[Function]}
        >
          日
        </li>
        <li
          className="c10"
          onClick={[Function]}
        >
          一
        </li>
        <li
          className="c10"
          onClick={[Function]}
        >
          二
        </li>
        <li
          className="c10"
          onClick={[Function]}
        >
          三
        </li>
        <li
          className="c10"
          onClick={[Function]}
        >
          四
        </li>
        <li
          className="c10"
          onClick={[Function]}
        >
          五
        </li>
        <li
          className="c10"
          onClick={[Function]}
        >
          六
        </li>
      </ul>
    </div>
    <div
      className="c11"
    >
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          28
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          29
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          30
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          31
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          1
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          2
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          3
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          4
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          5
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          6
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          7
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          8
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          9
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          10
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          11
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          12
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          13
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          14
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          15
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          16
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          17
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          18
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          19
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          20
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          21
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          22
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          23
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          24
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          25
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          26
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          27
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          28
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          29
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c14"
          onClick={[Function]}
        >
           
          30
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          1
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          2
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          3
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          4
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          5
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          6
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          7
        </i>
      </span>
      <span
        className="c12"
        onMouseOut=""
        onMouseOver=""
        value="2018-11-26"
      >
        <i
          className="c13"
          onClick={[Function]}
        >
           
          8
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`default Month 1`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0 {
  display: inline-block;
  width: 21.42857142857143em;
  padding: 2.142857142857143em 1.4285714285714286em 3.1428571428571432em;
  vertical-align: top;
  font-size: 1.4rem;
}

.c1 {
  font-size: 1em;
}

.c2 {
  text-align: center;
  margin-bottom: 0.8571428571428572em;
}

.c5 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
}

.c5:hover {
  color: #9482ff;
}

.c3 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: px;
  vertical-align: middle;
}

.c3:hover {
  color: #9482ff;
}

.c6 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: px;
  vertical-align: middle;
}

.c6:hover {
  color: #9482ff;
}

.c7 {
  font-size: 1em;
}

.c8 {
  display: inline-block;
  width: 33.333333333333336%;
  line-height: 2.857142857142857em;
  font-size: 1em;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
}

.c8:hover {
  color: #9482ff;
}

.c9 {
  padding: 0.35714285714285715em 0.7142857142857143em;
  font-style: normal;
  border-radius: 0.2142857142857143em;
}

.c10 {
  padding: 0.35714285714285715em 0.7142857142857143em;
  font-style: normal;
  border-radius: 0.2142857142857143em;
  background: #684fff;
  color: #fff;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
      width={200}
    >
      <div
        className="c2"
      >
        <span
          className="c3"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_Left  c4"
          />
        </span>
        <span
          className="c5"
          onClick={[Function]}
        >
          2018
        </span>
        <span
          className="c5"
          onClick={[Function]}
        >
          
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_right  c4"
          />
        </span>
      </div>
    </div>
    <div
      className="c7"
    >
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          一月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          二月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          三月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          四月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          五月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          六月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          七月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          八月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          九月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          十月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          十一月
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          十二月
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`default Weeks 1`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0 {
  display: inline-block;
  width: 21.42857142857143em;
  padding: 2.142857142857143em 1.4285714285714286em 3.1428571428571432em;
  vertical-align: top;
  font-size: 1.4rem;
}

.c1 {
  font-size: 1em;
}

.c2 {
  text-align: center;
  margin-bottom: 0.8571428571428572em;
}

.c5 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
}

.c5:hover {
  color: #9482ff;
}

.c3 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: px;
  vertical-align: middle;
}

.c3:hover {
  color: #9482ff;
}

.c6 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: px;
  vertical-align: middle;
}

.c6:hover {
  color: #9482ff;
}

.c7 {
  font-size: 1em;
}

.c8 {
  display: inline-block;
  width: 33.333333333333336%;
  line-height: 2.857142857142857em;
  font-size: 1em;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
}

.c8:hover {
  color: #9482ff;
}

.c9 {
  padding: 0.35714285714285715em 0.7142857142857143em;
  font-style: normal;
  border-radius: 0.2142857142857143em;
}

.c10 {
  padding: 0.35714285714285715em 0.7142857142857143em;
  font-style: normal;
  border-radius: 0.2142857142857143em;
  background: #684fff;
  color: #fff;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
      width={200}
    >
      <div
        className="c2"
      >
        <span
          className="c3"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_Left  c4"
          />
        </span>
        <span
          className="c5"
          onClick={[Function]}
        >
          2018
        </span>
        <span
          className="c5"
          onClick={[Function]}
        >
          -37-48周
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_right  c4"
          />
        </span>
      </div>
    </div>
    <div
      className="c7"
    >
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第37周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第38周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第39周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第40周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第41周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第42周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第43周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第44周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第45周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第46周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          第47周
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          第48周
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`default Year 1`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0 {
  display: inline-block;
  width: 21.42857142857143em;
  padding: 2.142857142857143em 1.4285714285714286em 3.1428571428571432em;
  vertical-align: top;
  font-size: 1.4rem;
}

.c1 {
  font-size: 1em;
}

.c2 {
  text-align: center;
  margin-bottom: 0.8571428571428572em;
}

.c5 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
}

.c5:hover {
  color: #9482ff;
}

.c3 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: left;
  margin-left: px;
  vertical-align: middle;
}

.c3:hover {
  color: #9482ff;
}

.c6 {
  color: #333;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  float: right;
  margin-right: px;
  vertical-align: middle;
}

.c6:hover {
  color: #9482ff;
}

.c7 {
  font-size: 1em;
}

.c8 {
  display: inline-block;
  width: 33.333333333333336%;
  line-height: 2.857142857142857em;
  font-size: 1em;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
}

.c8:hover {
  color: #9482ff;
}

.c9 {
  padding: 0.35714285714285715em 0.7142857142857143em;
  font-style: normal;
  border-radius: 0.2142857142857143em;
}

.c10 {
  padding: 0.35714285714285715em 0.7142857142857143em;
  font-style: normal;
  border-radius: 0.2142857142857143em;
  background: #684fff;
  color: #fff;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
      width={200}
    >
      <div
        className="c2"
      >
        <span
          className="c3"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_Left  c4"
          />
        </span>
        <span
          className="c5"
          onClick={[Function]}
        >
          2017-2028
        </span>
        <span
          className="c5"
          onClick={[Function]}
        >
          
        </span>
        <span
          className="c6"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_right  c4"
          />
        </span>
      </div>
    </div>
    <div
      className="c7"
    >
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2017
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c10"
        >
          2018
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2019
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2020
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2021
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2022
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2023
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2024
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2025
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2026
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2027
        </i>
      </span>
      <span
        className="c8"
        onClick={[Function]}
      >
        <i
          className="c9"
        >
          2028
        </i>
      </span>
    </div>
  </div>
</div>
`;
